_includes/manuals/1.12/4.2.6_matchers.md

The same smart matching technology underpins both smart variables and smart class parameters, so is described below.  It provides the following features for each parameter:

1. A default value that can be sent if no specific match is found.
1. An order of precendence for overrides, based on host attributes or facts.
1. A list of overrides (matchers).
1. Specifying a data type, allowing strings, integers and data structures to be passed natively to Puppet.
1. Optional validation of values.
1. Template processing of values for dynamic content.

#### Ordering

Overrides are processed in the order of precedence set in the *Order* field, from most to least specific (first match wins, unless merging is enabled).  This is a list of host attributes and fact names that overrides will be checked against.  If no override from this list matches, the default value is used.

Example attributes that may be listed are:

* `fqdn` - host's FQDN ("host.example.com")
* `hostgroup` - full name of the host group, including parents ("Europe/Web servers"). Matchers on host groups can be inherited by their children, see documentation for `host_group_matchers_inheritance` in [configuration options.](manuals/{{page.version}}/index.html#3.5.2ConfigurationOptions)
* `os` - name and version of operating system ("RedHat 6.4")
* `domain` - host's domain name ("example.com")
* `location` or `organization` - full name of the location/organization, including parents ("Company/Subsidiary")
* `is_virtual` - a fact [supplied by Facter](https://docs.puppetlabs.com/facter/latest/core_facts.html#isvirtual)

The default order is set under *Adminster > Settings > Puppet > Default_variables_Lookup_Path* and is "fqdn", "hostgroup", "os", "domain".

Note that there's a name conflict between the "operatingsystem" fact and Foreman's attribute "operatingsystem" (same as "os" above), and Foreman's attribute will be the one that is used, so will include the version number.

#### Overrides / matchers

Once defaults have been filled in for your parameter, you can then add criteria to match against - click the *Add Matcher* button under your parameter, and more input fields will appear:

<table class="table table-bordered table-condensed">
    <tbody>
    <tr>
      <td>Attribute type</td>
      <td>Should state a name = value relationship that Foreman use to match against the entries in the order list</td>
    </tr>
    <tr>
      <td>Value</td>
      <td>What the parameter should be in the ENC, if this rule is matched</td>
    </tr>
    <tr>
      <td>Use Puppet default</td>
      <td>Instead of providing a value, this parameter will not be supplied in the ENC output (use to prevent a default value being returned) - only for smart class parameters</td>
    </tr>
</tbody></table>

As an example, let's say that any machine in the "development" puppet environment should use a value of "foremandev" instead of "foreman" for the "user" parameter. Add "environment" to the end of the matchers list, then click the *Add Matcher-Value* button, and fill it out like this:

![Matcher](/static/images/screenshots/param_classes/1.10/matcher.png)

The match field currently supports string equality only, the values must match exactly.

##### Merging overrides

When the data type is a hash or array, ticking *Merge overrides* will cause values from every override that matches (e.g. an FQDN *and* domain) to be merged together.

Merging is "deep", so nested hashes and arrays will gain values rather than being overwritten entirely.

The *Merge default* option adds the default value as one of the values to merge, it will get the least important priority so one of the other values may overwrite it.

When the data type is an array, the *Avoid duplicates* option will de-duplicate the resulting array.

#### Data types

The type of data we want to pass to Puppet can be set in the *Parameter type* field.  Most commonly a string, but many other data types are supported:

* String - Everything is taken as a string.
* Boolean - Common representation of boolean values are accepted, including true, false, yes, no etc.
* Integer - Integer numbers only, can be negative.
* Real - Accept any numerical input.
* Array - A valid JSON or YAML input, that must evaluate to an array.
* Hash - A valid JSON or YAML input, that must evaluate to an object/map/dict/hash.
* YAML - Any valid YAML input.
* JSON - Any valid JSON input.

There's no easy way to tell what type of data the Puppet manifest is expecting, so you will need to read through the code/documentation that comes with a particular module to find out. Changing the type field requires an appropriately set "Default Value" field.

##### Complex data

Here's an example of adding an array parameter. Note the use of YAML in the edit box:

![Array](/static/images/screenshots/param_classes/1.10/array.png)

This will be converted to the JSON `["a","b"]` syntax when you save. You can also use hashes in YAML or JSON as data types too.

Note that the JSON hash syntax is not the same as Puppet's hash syntax: `{"example":"value"}`

#### Input validation

The *Optional input validator* section can be used to restrict the allowed values for the parameter.  It is important to note that the validation applies to changes made from the Host edit page as well as the Puppet Classes edit page.

The input validation section is hidden by default but can be opened by clicking on its title. When changing the parameter type this section will be automatically expanded to change the validations according to the new type.

<table class="table table-bordered table-condensed">
    <tbody>
    <tr>
      <td>Validator type</td>
      <td>A combobox of data types. The type applies to the next field, the validator.</td>
    </tr>
    <tr>
      <td>Validator rule</td>
      <td>Used to enforce certain values for the parameter values. See below for examples.</td>
    </tr>
</tbody></table>

For example, to restrict the "user" field to either "foreman" or "foremandev", tick the Required checkbox, and then set:

* Type: List
* Rule: foreman,foremandev

![Validators](/static/images/screenshots/param_classes/1.10/validators.png)

##### String validators

At present, the string type cannot be validated - leave the validator field blank, and all strings in the variable will be considered acceptable

##### Regexp / List validators

By entering a list (comma-separated, no spaces) or a regex (no delimiter required), the value to be assigned to the parameter will be checked against this list. If the value does not match the validator, and error will be raised.

#### Template variables

Because Foreman offers templating capabilities, you can utilise pre-existing variables, macros and or functions within your parameterized classes. This is especially useful if you need to send a string to Puppet/Chef, but have a need to embed host specific information within the string, such as the host's FQDN.

Let's look a quick example situation: we need to configure RabbitMQ and have it use our existing Puppet SSL certs. Using what we've learnt above, we jump into the RabbitMQ class and configure the "ssl cert" parameter as such:

![Template Variable](/static/images/screenshots/param_classes/1.10/template-variable-rabbit-ssl-cert.png)

As you can see we're utilising a template variable within the parameter's string just like we would in a normal template file. The important part of this string, as we're sure you've gathered, is the "@host.name" element. This pulls the FQDN from Foreman's facts and inserts it into the string.

More information regarding templates can be found [**on the wiki**](http://projects.theforeman.org/projects/foreman/wiki/TemplateWriting). This page also contains the [**the pre-existing functions and macros you can use in your templates and parameter classes.**](http://projects.theforeman.org/projects/foreman/wiki/TemplateWriting#Functions-and-macros)

#### Examples

##### Example 1 - Simple change to a single host

All our hosts use *server.foo* for something, except bob.domain.com which uses *server2.bar*:

<table class="table table-bordered table-condensed">
    <tbody>
    <tr>
      <td>Parameter</td>
      <td>target</td>
    </tr>
    <tr>
      <td>Description</td>
      <td>The target server to talk to</td>
    </tr>
    <tr>
      <td>Default Value</td>
      <td>server.foo</td>
    </tr>
    <tr>
      <td>Type Validator</td>
      <td>string</td>
    </tr>
    <tr>
      <td>Validator Constraint</td>
      <td></td>
    </tr>
    <tr>
      <td>Order</td>
      <td>fqdn<br />           hostgroup<br />           os<br />           domain</td>
    </tr>
    <tr>
      <td>Attribute type</td>
      <td>fqdn = bob.domain.com</td>
    </tr>
    <tr>
      <td>Value</td>
      <td>server2.bar</td>
    </tr>
</tbody></table>

##### Example 2 - Change for a group of hosts (via custom fact) with validation and ordering

Most hosts need to use a port of *80* but all machines with a fact *region* and value *europe* need to use *8080*. To do this, you have to add the factname (in this example *region*) to the searchlist:

<table class="table table-bordered table-condensed">
    <tbody>
    <tr>
      <td>Parameter</td>
      <td>port</td>
    </tr>
    <tr>
      <td>Description</td>
      <td>The port to use</td>
    </tr>
    <tr>
      <td>Default Value</td>
      <td>80</td>
    </tr>
    <tr>
      <td>Type Validator</td>
      <td>list</td>
    </tr>
    <tr>
      <td>Validator Constraint</td>
      <td>80,443,8080</td>
    </tr>
    <tr>
      <td>Order</td>
      <td>fqdn<br />           region<br />           hostgroup<br />           os<br />           domain</td>
    </tr>
    <tr>
      <td>Attribute type</td>
      <td>region = europe</td>
    </tr>
    <tr>
      <td>Value</td>
      <td>8080</td>
    </tr>
    <tr>
      <td>Attribute type</td>
      <td>fqdn = foo.domain</td>
    </tr>
    <tr>
      <td>Value</td>
      <td>67</td>
    </tr>
</tbody></table>

Note that all machines will get either 80 or 8080 as required, except foo.domain which will generate an error, since 67 is not in the list validator. Note also that foo.domain will match before region, since it is higher in the searchlist. The rule ordering does not matter.

It is also possible to mix conditions, e.g.

<table class="table table-bordered table-condensed">
    <tbody>
    <tr>
      <td>Parameter</td>
      <td>port</td>
    </tr>
    <tr>
      <td>Description</td>
      <td>The port to use</td>
    </tr>
    <tr>
      <td>Default Value</td>
      <td>80</td>
    </tr>
    <tr>
      <td>Type Validator</td>
      <td>list</td>
    </tr>
    <tr>
      <td>Validator Constraint</td>
      <td>80,443,8080</td>
    </tr>
    <tr>
      <td>Order</td>
      <td>fqdn<br />           region, hostgroup, environment<br />           hostgroup<br />           environment<br />           domain</td>
    </tr>
    <tr>
      <td>Attribute type</td>
      <td>fqdn = foo.domain</td>
    </tr>
    <tr>
      <td>Value</td>
      <td>67</td>
    </tr>
    <tr>
      <td>Attribute type</td>
      <td>region, hostgroup, environment = europe, "web servers", production</td>
    </tr>
    <tr>
      <td>Value</td>
      <td>8080</td>
    </tr>
</tbody></table>
